Wed Apr  1 11:10:15 EST 1998 Matthew Wilson <msw@gimp.org
	
	* app/brightness_contrast.c
	* app/by_color_select.c
	* app/color_balance.c
	* app/color_picker.c
	* app/curves.c
	* app/histogram_tool.c
	* app/hue_saturation.c
	* app/levels.c
	* app/posterize.c
	* app/threshold.c
	* app/transform_core.c: modified to call the cancel callback
	instead of the ok callback when freed.  modified to save the
	last used drawable so that we might be able to check later
	and restart the tool if need be.

	* app/disp_callbacks.c
	* app/gimage.c: modified tool restart/destruction code

	* app/tools.c
	* app/tools.h: added tools_initialize, made changes to
	be able save the last used drawable in the tool.

Wed Apr  1 23:14:42 MEST 1998 Sven Neumann <sven@gimp.org>

	* configure.in: added checks for print-systems as suggested by
	Michael Sweet
	* plugins/print
	* plugins/sgi: updated to the version on the registry

Wed Apr  1 20:04:26 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/layers_dialog.c: applied gimp-simon-980331-0
	* app/blend.c: change the repeat_mode_menu to insensitive when
	gradient_type is Shapeburst*

Wed Apr 01 04:07:29 EST 1998 Matthew Wilson <msw@gimp.org>

	* app/disp_callbacks.c: Only destroy the current tool if you change
	gdisplays and the tool caches image data.
	
Wed Apr 01 03:40:15 EST 1998 Matthew Wilson <msw@gimp.org>

	* app/disp_callbacks.c:  If the current gdisp->ID does not match
	the ID of the gdisp_ptr in the active_tool, restart it.
	
Tue Mar 31 03:10:12 EST 1998 Matthew Wilson <msw@gimp.org>

	* app/iscissors.c: Set tool->preserve to TRUE in tools_new_iscissors.
	
Tue Mar 31 02:21:15 EST 1998 Matthew Wilson <msw@gimp.org>

	* app/gimage.c
	* app/tools.c
	* app/tools.h: Added a field in the Tools struct, preserve.
	During gimage_dirty, if this flag is not set the tool will be
	reset.  This is good for tools that keep a copy of the image
	in cache for local manipulation like transform_core.

	* app/bezier_select.c
	* app/blend.c